# mesh_hydro

./: .gitignore  AI_DOCUMENTATION.md  AI_DOCUMENTATION_COMPLETE.md  AI_INSTRUCTIONS.md  AI_INSTRUCTIONS_INDEX.md  ARCHITECTURE.md  BACKEND_FRONTEND_TODO.md  BUGS_FIXED.md  BUG_FIXES_REPORT.md  BUILD_CHECK_REPORT.md  CACHE_CLEAR_FRONTEND_REBUILD_REPORT.md  CACHE_CLEAR_SOLUTION_REPORT.md  CENTRALIZED_STATUS_SYSTEM_REPORT.md  CHANGELOG_19_10_2025.md  CJSON_FIX.md  CODE_AUDIT_REPORT.md  COLLAPSED_SECTIONS_FIX_REPORT.md  CONFIG_CHAIN_DOCUMENTATION.md  CURRENT_STATUS.md  DASHBOARD_NODES_FIX_REPORT.md  DOCKER_FRONTEND_FORCE_REBUILD_REPORT.md  DOCKER_FRONTEND_RESTART_REPORT.md  DOCKER_REBUILD_REPORT.md  DOCKER_УПРАВЛЕНИЕ_ГОТОВО.md  EVENT_NOTIFICATIONS.md  EVENT_ПРОВЕРЕНО.md  EXPANDABLE_ACTIONS_UI_REPORT.md  FINAL_IMPROVEMENTS_20_10_2025.md  FINAL_INCLUDES_ERROR_FIX_REPORT.md  FIREWALL_FIX.md  FRONTEND_BUTTONS_DESIGN_IMPROVEMENTS_REPORT.md  FRONTEND_CONFIG_BUTTON_REPORT.md  FRONTEND_INCLUDES_ERROR_FINAL_FIX_REPORT.md  FRONTEND_INCLUDES_ERROR_FIX_REPORT.md  FRONTEND_ПЕРЕСОБРАН_УСПЕШНО.md  FULL_CHAIN_PUMP_EVENTS_VERIFICATION_REPORT.md  GET_CONFIG_TESTING.md  GET_CONFIG_UPDATE_SUMMARY.md  GPIO_UPDATE_SUMMARY.md  HEAP_ИСПРАВЛЕН.md  (+127 more)
common/: AI_INSTRUCTIONS.md  README.md  USAGE.md
doc/: MESH_AI_QUICK_START.md  MESH_ARCHITECTURE_PLAN.md  MESH_HYDRO_V2_FINAL_PLAN.md  MESH_IMPLEMENTATION_PRIORITY.md  MESH_PINOUT_ALL_NODES.md  MESH_PLAN_CREATED_17_10_2025.md  MESH_PLAN_FINAL_SUMMARY.md  MESH_PROJECT_INDEX.md  MESH_QUICK_SUMMARY.md  MESH_START_HERE.md  README_MESH_PROJECT.md
node_climate/: AI_INSTRUCTIONS.md  BUILD_NOTES.md  BUILD_SUCCESS.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  MOCK_MODE.md  MOCK_MODE_АКТИВИРОВАН.md  README.md  READY_TO_FLASH.md  build.bat  build.ps1  flash.bat  sdkconfig.defaults
node_climate/main/: CMakeLists.txt  app_main.c
node_display/: AI_INSTRUCTIONS.md  CMakeLists.txt  DISPLAY_ГОТОВ.md  README.md  sdkconfig.defaults
node_ec/: AI_INSTRUCTIONS.md  CMakeLists.txt  README.md  READY_TO_BUILD.md  sdkconfig.defaults
node_ec/main/: CMakeLists.txt  app_main.c
node_ph/: AI_INSTRUCTIONS.md  CMakeLists.txt  GPIO_CONFIG.md  GPIO_SUMMARY.md  PH_SENSOR_FIX.md  PUMP_DEBUG_FIX.md  PUMP_MANUAL_CONTROL_TEST.md  QUICK_TEST_GUIDE.md  README.md  READY_TO_BUILD.md  build.bat  build_debug.bat  final_test.md  fix_and_test.bat  partitions.csv  quick_build.bat  quick_test.md  sdkconfig.defaults  test_config_flow.md  test_pump_command.json  test_pump_debug.bat  test_pumps.bat  test_pumps.ps1
node_ph/main/: CMakeLists.txt  app_main.c
node_ph_ec/: AI_INSTRUCTIONS.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  MOCK_MODE_INFO.md  README.md  READY_TO_USE.md  partitions.csv  sdkconfig.defaults  ПРОЕКТ_ГОТОВ.md  ТЕСТИРУЙ_БЕЗ_ДАТЧИКОВ.md
node_ph_ec/components/ph_ec_manager/: CMakeLists.txt  ph_ec_manager.c  ph_ec_manager.h
node_ph_ec/main/: CMakeLists.txt  app_main.c
node_relay/: AI_INSTRUCTIONS.md  CMakeLists.txt  README.md
node_template/: AI_INSTRUCTIONS.md  CMakeLists.txt  README.md
node_water/: AI_INSTRUCTIONS.md  CMakeLists.txt  README.md
root_node/: AI_INSTRUCTIONS.md  CMakeLists.txt  COMPILE_FIX.md  IMPLEMENTATION_COMPLETE.md  README.md  partitions.csv  sdkconfig.defaults
root_node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  root_config.h
server/: AI_INSTRUCTIONS.md  BUGS_FIXED_20_10_2025.md  DEPLOYMENT_GUIDE.md  (+42 more)
(+545 files in other folders)
